--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ###### Requirements without Version Specifiers ######
 nose
 requests
-
+fastapi
+"uvicorn[standard]"
 ###### Requirements with Version Specifiers ######
